postgres-macros/tests/fail/missing_variable.stderr
error[E0433]: failed to resolve: could not find `sql_unchecked` in `sqlm_postgres_macros`
 --> tests/fail/missing_variable.rs:2:27
  |
2 |     sqlm_postgres_macros::sql_unchecked!("{id}");
  |                           ^^^^^^^^^^^^^ could not find `sql_unchecked` in `sqlm_postgres_macros`
